--- a/work.html
+++ b/work.html
@@ -105,7 +105,7 @@
                     <video src="images/news-hub-01-video.mp4" poster="images/Blue Modern Healthy Tips YouTube Thumbnail.png" controls width="300px" height="300px" >
                 </div>
                 <div class="work">
-                    <video src="" poster="" >
+                    <video src="images/fs-gif-01.mp4" poster="" controls width="300px" height="300px">
                 </div>
                 <div class="work">
                     <video src="" poster=""   >
@@ -153,6 +153,18 @@
                 <div class="work">
                     <img src="images/salon-logo-2.png">
                 </div>
+
+                <!-- new update the picture in 25nov 2023-->
+                <div class="work">
+                    <img src="images/watch-poster.png">
+                </div>
+                <div class="work">
+                    <img src="images/HEADPHONE-LOGO.jpg">
+                </div>
+                <div class="work">
+                    <img src="">
+                </div>
+
 
                 <div class="work">
                     <img src="images/pkc-logo-new.png">
@@ -210,11 +222,12 @@
                     <img src="images/pos-shoe2.png">
                 </div>
                 <div class="work">
-                    <img src="">
+                    <img src="images/s-log-deisgn-by-new-method.png">
                 </div>
                 <div class="work">
                     <img src="">
                 </div>
+
 
             </div>
 
