--- a/work.html
+++ b/work.html
@@ -204,7 +204,7 @@
                     <img src="images/NEW-PROPERTY-003-POSTER.png">
                 </div>
                 <div class="work">
-                    <img src="">
+                    <img src="images/bike-logo-project.jpg">
                 </div>
 
                 <div class="work">
