--- a/work.html
+++ b/work.html
@@ -165,6 +165,17 @@
                     <img src="">
                 </div>
 
+                 <!-- new update the picture in 22march 2024-->
+                <div class="work">
+                    <img src="images/rest-logo-1.png">
+                </div>
+                <div class="work">
+                    <img src="images/the-ring-2-log.png">
+                </div>
+                <div class="work">
+                    <img src="">
+                </div>
+
 
                 <div class="work">
                     <img src="images/pkc-logo-new.png">
