Update work fie

--- a/work.html
+++ b/work.html
@@ -165,7 +165,7 @@
                     <img src="">
                 </div>
 
-                 <!-- new update the picture in 22march 2024-->
+                 <!-- new update the picture in 22 march 2024-->
                 <div class="work">
                     <img src="images/rest-logo-1.png">
                 </div>
