--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <h2>Web Development</h2>
                     <p>I will provide services of Full-Stack Web Development. </p>
                     <p>Website Create & Design</p>
-                    <p>HTML, CSS, JavaScript, Bootstrap & React JS</p>
+                    <p>HTML, CSS, JavaScript, Bootstrap, React JS, NodeJS & MongoDB</p>
                     
                 </div>
             </div>
