--- a/work.html
+++ b/work.html
@@ -113,6 +113,15 @@
                 
 
                 
+                <div class="work">
+                    <img src="images/">
+                </div>
+                <div class="work">
+                    <img src="images/real_estate_poster-2.png">
+                </div>
+                <div class="work">
+                    <img src="images/burger-poster-1.png">
+                </div>
 
                 <div class="work">
                     <img src="images/poster-shoe-3.png">
