--- a/work.html
+++ b/work.html
@@ -114,13 +114,13 @@
 
                 
                 <div class="work">
-                    <img src="images/">
+                    <img src="images/family_first_mediation-l.png">
                 </div>
                 <div class="work">
-                    <img src="images/real_estate_poster-2.png">
+                    <img src="images/church-logo.jpg">
                 </div>
                 <div class="work">
-                    <img src="images/burger-poster-1.png">
+                    <img src="images/car-wrap-des.jpg">
                 </div>
 
                 <div class="work">
